# agentelocal

./: .gitignore  AGENTS.md  CHANGELOG.md  GOVERNANCE.md  INSTRUCCIONES_INICIO_PROYECTO.md  PLANTILLA_INICIO_PROYECTO_LIMPIO_AGENTS_FIRST.md  PROJECT.md  PROJECT_CORREO_AGENT.md  QUICKSTART.md  README.md  README_PAQUETE.md
.github/: copilot-instructions.md  (+1 more)
backend/: .env.example  .importlinter  README.md  alembic.ini  fix_env.py  pyproject.toml  requirements-security.txt  reset_db.py  setup_db.py
backend/alembic/: env.py
backend/alembic/versions/: 020260318_0001_health_check.py  030260405_0002_correo_agent.py
backend/src/agente_local/: main.py
backend/src/agente_local/application/ports/: __init__.py  calendar_repository.py  calendar_sync.py  drafting_service.py  gmail_sync.py  sync_cursor.py  thread_repository.py  triage_service.py
backend/src/agente_local/application/services/: sync_workspace_service.py
backend/src/agente_local/entrypoints/api/: deps.py
backend/src/agente_local/entrypoints/api/v1/: router.py
backend/src/agente_local/infrastructure/: calendar_sync.py  gmail_sync.py  google_credentials.py
backend/src/agente_local/infrastructure/persistence/: __init__.py  database.py  models.py  repositories.py
backend/src/nuevo_proyecto_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/tests/: conftest.py  test_accounts_endpoint.py  test_calendar_sync_adapter.py  test_gmail_sync_adapter.py  test_health.py  test_persistence_repositories.py  test_ports_contracts.py  test_sync_endpoint.py  test_sync_workspace_service.py
(+24 files in other folders)
